--- a/TaskMail/TaskMail.csproj
+++ b/TaskMail/TaskMail.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3" />
+    <PackageReference Include="swashbuckle.AspNetcore" Version="9.0.3" />
   </ItemGroup>
 
 </Project>
