--- a/TaskMail/appsettings.Development.json
+++ b/TaskMail/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  
+  "ConnectionStrings": {
+        "DefaultConnection": "Server=192.168.2.200\\SQL2017;Database=SITraining;user ID=SIMPLEINSPIRE;Password=simplesolve@1234;Pooling=true;Max Pool Size=400;"
+    },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
