--- a/TaskMail/appsettings.Development.json
+++ b/TaskMail/appsettings.Development.json
@@ -1,6 +1,6 @@
 { 
   "ConnectionStrings": {
-        "SITraining": "Server=192.168.2.200\\SQL2017;Database=SITraining;user ID=SIMPLEINSPIRE;Password=simplesolve@1234;TrustServerCertificate=True;Max Pool Size=400;"
+        "SimpleInspireDB": "Server=192.168.2.200\\SQL2017;Database=SITraining;user ID=SIMPLEINSPIRE;Password=simplesolve@1234;Pooling=True;Max Pool Size=400;"
     },
 
   "Logging": {
