--- a/TaskMail/appsettings.Development.json
+++ b/TaskMail/appsettings.Development.json
@@ -1,12 +1,14 @@
-{ 
+{
   "ConnectionStrings": {
-        "SimpleInspireDB": "Server=192.168.2.200\\SQL2017;Database=SITraining;user ID=SIMPLEINSPIRE;Password=simplesolve@1234;Pooling=True;Max Pool Size=400;"
-    },
-
+    "SimpleInspireDB": "Server=192.168.2.200\\SQL2017;Database=SITraining;User ID=SIMPLEINSPIRE;Password=simplesolve@1234;Pooling=True;Max Pool Size=400;"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   }
 }
+
+
