taskheader httpcontext accessor fix

--- a/TaskMail/Properties/launchSettings.json
+++ b/TaskMail/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "Condologic.PolicyFolder": {
+    "TaskMail.Folder": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
