trace log added

--- a/TaskMail/appsettings.json
+++ b/TaskMail/appsettings.json
@@ -1,4 +1,17 @@
 {
+   "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "WriteTo": [
+        {
+            "Name": "File",
+            "Args": {
+                "restrictedToMinimumLevel": "Error",
+                "path": "\\TaskMail\\TaskMail\\Tracelog.txt",
+                "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message}{NewLine}{Exception}"
+            }
+        }
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
