--- a/TaskMail/appsettings.json
+++ b/TaskMail/appsettings.json
@@ -6,7 +6,7 @@
             "Name": "File",
             "Args": {
                 "restrictedToMinimumLevel": "Error",
-                "path": "\\TaskMail\\TaskMail\\Tracelog.txt",
+                "path": "\\Project\\TaskMail\\Tracelog.txt",
                 "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message}{NewLine}{Exception}"
             }
         }
